--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "npm": "6.14.4"
   },
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "concurrently \"npm run server\" \"npm run client\""
+    "build": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Oren Spiegel",
   "license": "ISC",
