--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Oren Spiegel",
   "license": "ISC",
